# co2mon-docker

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml
co2mond/: CMakeLists.txt
grafana/: grafana-dashboard.json
libco2mon/: CMakeLists.txt
